apps/flags/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: togglemaster-flags
  labels:
    app: flag-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
        - name: flag-service
          image: acrtogglemasterprod.azurecr.io/flag-service:latest
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: togglemaster-flags
spec:
  selector:
    app: flag-service
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
